# smart-search-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  main.py  pyproject.toml  tracking_config.json
.github/workflows/: main.yml
services/: run_chromadb.sh
src/bot/: README.md  bot.py  bot_hyde.py
src/client/: README.md  client.py  get_me.py  test.py  test2.py  test3.py
src/database/: README.md  __init__.py  chromadb_wrapper.py  clear_tables.py  install_schema.py  mocks.py  schema.sql
src/dumper/: README.md
src/internal-multimodal-api/: .gitignore  README.md  app.py  models.sh  pyproject.toml
src/internal_llm/: process.py
src/models/: README.md
src/retriever/: README.md
src/test/: a.txt  audio.py  image.py  text.py  video.py
src/utils/: utils.py
src/web/: test.py  test2.py
src/web/config_site/: manage.py
src/web/config_site/panel/: config_store.py  telegram_service.py  urls.py  views.py
src/web/config_site/panel/templates/panel/: index.html
src/web/config_site/telegram_config_panel/: asgi.py  settings.py  urls.py  wsgi.py
