[project]
name = "smart-search-engine"
version = "0.1.0"
description = "Turn your Telegram history into a private, semantic, multimodal knowledge base."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.3",
]

[tool.ruff]
select = ["E4", "E7", "E9", "F"]
ignore = []

line-length = 120

# Automatic fixes
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "U", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT", "FIX", "RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
