[project]
name = "internal-multimodal-api"
version = "0.1.0"
description = "Private multimodal API: Qwen2.5-VL + Whisper + diarization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",

    # Qwen2.5-VL stack
    "transformers>=4.49.0",
    "accelerate>=1.1.1",
    "qwen-vl-utils[decord]>=0.0.14",
    "pillow>=10.3.0",
    "numpy>=1.26.0",

    # Audio stack
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
]

[tool.uv]